# xlai

./: .env.example  .gitignore  .gitmodules  .prettierignore  ARCHITECTURE.md  Cargo.toml  LICENSE  README.md  eslint.config.mjs  mise.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
crates/backends/xlai-backend-llama-cpp/: Cargo.toml
crates/backends/xlai-backend-llama-cpp/src/: lib.rs  prompt.rs  request.rs
crates/backends/xlai-backend-llama-cpp/tests/: e2e_chat.rs
crates/backends/xlai-backend-openrouter/: Cargo.toml
crates/backends/xlai-backend-openrouter/src/: lib.rs  provider_response.rs  request.rs  response.rs  stream.rs
crates/backends/xlai-backend-openrouter/tests/: chat_retry.rs
crates/core/xlai-core/: Cargo.toml
crates/core/xlai-core/src/: cbor.rs  chat.rs  content.rs  embeddings.rs  error.rs  filesystem.rs  lib.rs  lib_tests.rs  transcription.rs
crates/platform/xlai-facade/: Cargo.toml  build.rs
crates/platform/xlai-facade/src/: lib.rs
crates/platform/xlai-ffi/: Cargo.toml
crates/platform/xlai-ffi/src/: lib.rs
crates/qts/xlai-qts-core/: Cargo.toml
crates/qts/xlai-qts-core/examples/: dump_codes.rs  dump_first_frame_hidden.rs  export_voice_clone_prompts.rs  synthesize_wav.rs
crates/qts/xlai-qts-core/src/: lib.rs  qts_tts_backend.rs  qts_tts_backend_tests.rs
crates/qts/xlai-qts-core/testdata/: sample1.xvector.voice-clone-prompt.cbor
crates/qts/xlai-qts-manifest/: Cargo.toml
crates/qts/xlai-qts-manifest/src/: lib.rs
crates/sys/xlai-sys-ggml/: Cargo.toml  build.rs
crates/sys/xlai-sys-ggml/src/: lib.rs
crates/xlai-backend-gemini/: Cargo.toml
crates/xlai-backend-gemini/src/: image_generation.rs  lib.rs  request.rs  response.rs  stream.rs  tests.rs
crates/xlai-backend-gemini/tests/: e2e_chat.rs  e2e_image_generation.rs
crates/xlai-backend-llama-cpp/: Cargo.toml
crates/xlai-backend-llama-cpp/prompts/system/: structured-output-json-schema.md  tool-calling.md
crates/xlai-backend-llama-cpp/src/: lib.rs  prompt.rs  request.rs  tests.rs  tool_calling.rs
crates/xlai-backend-llama-cpp/src/tests/: mod.rs  prompt_and_request.rs  structured_validation.rs  tool_parsing.rs
crates/xlai-backend-openai/: Cargo.toml
crates/xlai-backend-openai/src/: image_generation.rs  lib.rs  provider_response.rs  request.rs  response.rs  stream.rs  tests.rs  transcription.rs  tts.rs
crates/xlai-backend-openai/src/tests/: chat_request.rs  common.rs  image_generation.rs  mod.rs  transcription.rs  tts.rs
crates/xlai-backend-openai/tests/: chat_retry.rs  e2e_chat.rs  e2e_image_generation.rs  e2e_transcription.rs  e2e_tts.rs
crates/xlai-backend-qts/: Cargo.toml
crates/xlai-backend-qts-wasm/: Cargo.toml
crates/xlai-backend-qts-wasm/src/: lib.rs
crates/xlai-backend-qts/src/: lib.rs  request_map.rs
crates/xlai-backend-qts/tests/: e2e_model_dir.rs
crates/xlai-backend-transformersjs/: Cargo.toml
crates/xlai-backend-transformersjs/src/: lib.rs  tests.rs
crates/xlai-build-native/: Cargo.toml
crates/xlai-build-native/src/: cmake_env.rs  ggml_build.rs  link_search.rs  llama_patch.rs  paths.rs
crates/xlai-core/: Cargo.toml
crates/xlai-core/src/: chat.rs  content.rs  embeddings.rs  error.rs  execution.rs  image_generation.rs  knowledge.rs  lib.rs  lib_tests.rs  metadata.rs  runtime.rs  serde_bytes_format.rs  transcription.rs  tts.rs
crates/xlai-ffi/: Cargo.toml
crates/xlai-ffi/src/: lib.rs
crates/xlai-llama-cpp-sys/: Cargo.toml  build.rs
crates/xlai-llama-cpp-sys/src/: lib.rs  wrapper.cpp
crates/xlai-local-common/: Cargo.toml
crates/xlai-local-common/prompts/chat/: manual.txt
crates/xlai-local-common/src/: lib.rs  prompt.rs  prompt_store.rs  request.rs  schema.rs  tool_calling.rs
crates/xlai-native/: Cargo.toml  build.rs
crates/xlai-native/examples/: chat_prompt.rs
crates/xlai-native/examples/tracing_setup/: mod.rs
crates/xlai-native/src/: lib.rs
crates/xlai-observability/: Cargo.toml
crates/xlai-observability/src/: lib.rs
crates/xlai-qts-browser/: Cargo.toml
crates/xlai-qts-browser/src/: lib.rs
crates/xlai-qts-cli/: Cargo.toml
crates/xlai-qts-cli/src/: cli_support.rs  main.rs  tracing_init.rs  tui.rs
crates/xlai-qts-core/: Cargo.toml  build.rs
crates/xlai-qts-core/benches/: synthesize.rs
crates/xlai-qts-core/examples/: benchmark_synthesize.rs  dump_codes.rs  dump_first_frame_hidden.rs  dump_tokens.rs  export_voice_clone_prompts.rs  synthesize_wav.rs  tracing_setup.rs
crates/xlai-qts-core/proto/: voice_clone_prompt.proto
crates/xlai-qts-core/src/: browser_include.rs  error.rs  ggml.rs  lib.rs  qts_request_map.rs  qts_tts_backend.rs  qts_tts_backend_tests.rs  synthesis_profile.rs  voice_clone_builder.rs  voice_clone_prompt.rs
crates/xlai-qts-core/src/model/: mod.rs  paths.rs
crates/xlai-qts-core/src/pipeline/: backend.rs  byte_unicode.rs  ggml_log_bridge.rs  mod.rs  reference_codec_encoder.rs  speaker_encoder.rs  tokenizer.rs  tts_transformer.rs  vocoder.rs  vocoder_streaming.rs
crates/xlai-qts-core/testdata/: README.md  sample1.icl.voice-clone-prompt.cbor  sample1.icl.voice-clone-prompt.pb  sample1.xvector.voice-clone-prompt.pb
crates/xlai-qts-core/tests/: e2e_model_dir.rs  integration_model_dir.rs
crates/xlai-runtime/: Cargo.toml
crates/xlai-runtime/prompts/system/: system-reminder-available-skills.md  tool-description-skill-resource.md  tool-description-skill.md
crates/xlai-runtime/src/: agent.rs  chat.rs  execution_handle.rs  fs.rs  lib.rs  prompt.rs  skill_store.rs
crates/xlai-runtime/src/agent/: builtin.rs  mcp.rs  system_reminder.rs
crates/xlai-runtime/src/local_common/: mod.rs  prompt.rs  prompt_store.rs  request.rs  (+1 more)
crates/xlai-sys/: Cargo.toml  build.rs  wrapper.h
crates/xlai-sys-llama/: Cargo.toml  build.rs
crates/xlai-sys-llama/src/: lib.rs
crates/xlai-sys/src/: lib.rs  llama_impl.rs  llama_log_bridge.rs
crates/xlai-wasm/: Cargo.toml
crates/xlai-wasm/src/: agent_session.rs  api.rs  backend_qts_browser.rs  chat_session.rs  factory.rs  js_file_system.rs  lib.rs  memory_fs.rs  qts_browser.rs  tts_runtime.rs  types.rs  wasm_helpers.rs
(+155 files in other folders)
