[workspace]
members = [
    "crates/xlai-backend-llama-cpp",
    "crates/xlai-backend-openai",
    "crates/xlai-core", "crates/xlai-ffi",
    "crates/xlai-llama-cpp-sys",
    "crates/xlai-native",
    "crates/xlai-runtime",
    "crates/xlai-wasm",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.94"
license = "Apache-2.0"

[workspace.dependencies]
async-stream = "0.3"
base64 = "0.22"
bindgen = "0.72"
cmake = "0.1"
futures-core = "0.3"
futures-util = { version = "0.3", default-features = false, features = ["std"] }
getrandom = "0.2"
gray_matter = "0.3.2"
js-sys = "0.3"
reqwest = { version = "0.13", default-features = false, features = ["json", "multipart", "stream"] }
rust-embed = "8.11.0"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
serde_json = "1"
tera = "1.20.1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.67"

[workspace.lints.rust]
unconditional_panic = "deny"

[workspace.lints.clippy]
panic = "deny"
unwrap_used = "deny"
expect_used = "deny"
todo = "deny"
unimplemented = "deny"
panic_in_result_fn = "deny"

[profile.release]
debug = "line-tables-only"
lto = true
codegen-units = 1
