[workspace]
members = [
    "crates/sys/xlai-build-native",
    "crates/backends/xlai-backend-gemini",
    "crates/backends/xlai-backend-llama-cpp",
    "crates/backends/xlai-backend-openai",
    "crates/backends/xlai-backend-openrouter",
    "crates/backends/xlai-backend-transformersjs",
    "crates/core/xlai-core",
    "crates/platform/xlai-ffi",
    "crates/platform/xlai-facade",
    "crates/platform/xlai-native",
    "crates/qts/xlai-qts-cli",
    "crates/qts/xlai-qts-core",
    "crates/qts/xlai-qts-manifest",
    "crates/runtime/xlai-runtime",
    "crates/sys/xlai-sys-ggml",
    "crates/sys/xlai-sys-llama",
    "crates/platform/xlai-wasm",
]
exclude = ["reference/qts", "target/_ortfetch", "target/ortcheck"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.94"
license = "Apache-2.0"
repository = "https://github.com/yetanother.ai/xlai"

[workspace.dependencies]
anyhow = "1.0"
async-stream = "0.3"
base64 = "0.22"
bindgen = "0.72"
ciborium = "0.2"
cmake = "0.1"
criterion = "0.8"
cpal = "0.17"
crossterm = "0.29"
futures-core = "0.3"
futures-util = { version = "0.3", default-features = false, features = ["std"] }
getrandom = "0.2"
gray_matter = "0.3.2"
hound = "3.5.1"
image = "0.25"
jsonschema = { version = "0.45.0", default-features = false }
js-sys = "0.3"
libc = "0.2"
ort = { version = "2.0.0-rc.12", default-features = true }
rand = "0.10"
ratatui = "0.30"
reqwest = { version = "0.13", default-features = false, features = ["json", "multipart", "stream"] }
rustfft = "6.4.1"
rust-embed = "8.11.0"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
serde_json = "1"
tera = "1.20.1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "env-filter",
    "fmt",
    "registry",
    "std",
] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.67"
windows-sys = "0.61"

# Path + version for workspace members that are published to crates.io (see docs/development/publishing.md).
xlai-core = { path = "crates/core/xlai-core", version = "0.1.0" }
xlai-runtime = { path = "crates/runtime/xlai-runtime", version = "0.1.0" }
xlai-backend-openai = { path = "crates/backends/xlai-backend-openai", version = "0.1.0" }
xlai-backend-openrouter = { path = "crates/backends/xlai-backend-openrouter", version = "0.1.0" }
xlai-backend-transformersjs = { path = "crates/backends/xlai-backend-transformersjs", version = "0.1.0" }
xlai-backend-gemini = { path = "crates/backends/xlai-backend-gemini", version = "0.1.0" }
xlai-backend-llama-cpp = { path = "crates/backends/xlai-backend-llama-cpp", version = "0.1.0" }
xlai-ffi = { path = "crates/platform/xlai-ffi", version = "0.1.0" }
xlai-facade = { path = "crates/platform/xlai-facade", version = "0.1.0", default-features = false }
xlai-native = { path = "crates/platform/xlai-native", version = "0.1.0" }
xlai-qts-core = { path = "crates/qts/xlai-qts-core", version = "0.1.0" }
xlai-qts-manifest = { path = "crates/qts/xlai-qts-manifest", version = "0.1.0" }
xlai-build-native = { path = "crates/sys/xlai-build-native", version = "0.1.0" }
xlai-sys-ggml = { path = "crates/sys/xlai-sys-ggml", version = "0.1.0" }
xlai-sys-llama = { path = "crates/sys/xlai-sys-llama", version = "0.1.0" }
xlai-wasm = { path = "crates/platform/xlai-wasm", version = "0.1.0" }

[workspace.lints.rust]
unconditional_panic = "deny"

[workspace.lints.clippy]
panic = "deny"
unwrap_used = "deny"
expect_used = "deny"
todo = "deny"
unimplemented = "deny"
panic_in_result_fn = "deny"

[profile.release]
debug = "line-tables-only"
lto = true
codegen-units = 1
