[package]
name = "xlai-backend-gemini"
description = "Gemini API backend for xlai"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
async-stream.workspace = true
base64.workspace = true
futures-util.workspace = true
image.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
xlai-core.workspace = true

[dev-dependencies]
tokio.workspace = true
