[package]
name = "xlai-backend-llama-cpp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[features]
default = ["openblas"]
openblas = ["xlai-sys/openblas"]
metal = ["xlai-sys/metal"]
vulkan = ["xlai-sys/vulkan"]

[dependencies]
async-stream.workspace = true
serde_json.workspace = true
tokio.workspace = true
xlai-core = { path = "../xlai-core" }
xlai-local-common = { path = "../xlai-local-common" }
xlai-sys = { path = "../xlai-sys", default-features = false, features = ["llama"] }

[dev-dependencies]
tokio.workspace = true
xlai-runtime = { path = "../xlai-runtime" }

[lints]
workspace = true
