[package]
name = "xlai-backend-llama-cpp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[features]
default = ["openblas"]
openblas = ["xlai-sys/openblas"]
metal = ["xlai-sys/metal"]
vulkan = ["xlai-sys/vulkan"]

[dependencies]
async-stream.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
xlai-core.workspace = true
xlai-local-common.workspace = true
xlai-sys = { workspace = true, features = ["llama"] }

[dev-dependencies]
tokio.workspace = true
xlai-runtime.workspace = true

[lints]
workspace = true
