[package]
name = "xlai-backend-llama-cpp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "llama.cpp-backed chat and embeddings backend for xlai (depends on unpublished `xlai-sys`)."
publish = false

[features]
default = ["openblas"]
openblas = ["xlai-sys/openblas"]
metal = ["xlai-sys/metal"]
vulkan = ["xlai-sys/vulkan"]

[dependencies]
async-stream.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
xlai-core.workspace = true
xlai-runtime.workspace = true
xlai-sys = { workspace = true, features = ["llama"] }

[dev-dependencies]
tokio.workspace = true

[lints]
workspace = true
