[package]
name = "xlai-backend-openai"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
async-stream.workspace = true
futures-util.workspace = true
serde.workspace = true
serde_json.workspace = true
xlai-core = { path = "../xlai-core" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
reqwest = { workspace = true, features = ["rustls"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
reqwest = { workspace = true }

[dev-dependencies]
dotenvy = "0.15.7"
tokio.workspace = true
xlai-runtime = { path = "../xlai-runtime" }

[lints]
workspace = true
