[package]
name = "xlai-backend-openai"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "OpenAI-compatible HTTP chat backend for xlai"

[dependencies]
async-stream.workspace = true
base64.workspace = true
futures-util.workspace = true
serde.workspace = true
serde_json.workspace = true
xlai-core.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
reqwest = { workspace = true, features = ["rustls"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
reqwest = { workspace = true }

[dev-dependencies]
dotenvy = "0.15.7"
tokio.workspace = true
xlai-runtime.workspace = true

[lints]
workspace = true
