[package]
name = "xlai-backend-qts-wasm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Browser-oriented QTS TtsModel adapter (stub until GGML/ORT WASM engines land)."
publish = false

[dependencies]
serde.workspace = true
serde_json.workspace = true
futures-util.workspace = true
xlai-core.workspace = true
xlai-qts-browser.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }

[lints]
workspace = true
