[package]
name = "xlai-backend-qts"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Native Qwen3 TTS (QTS) backend for xlai via `TtsModel`."

[features]
default = ["openblas"]
openblas = ["xlai-qts-core/openblas"]
metal = ["xlai-qts-core/metal"]
vulkan = ["xlai-qts-core/vulkan"]

[dependencies]
base64.workspace = true
hound.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
xlai-core = { path = "../xlai-core" }
xlai-qts-core = { path = "../xlai-qts-core" }

[dev-dependencies]
futures-util.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
xlai-runtime = { path = "../xlai-runtime" }

[lints]
workspace = true
