[package]
name = "xlai-backend-qts"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Native Qwen3 TTS (QTS) backend for xlai via `TtsModel`."
publish = false

[features]
default = ["openblas"]
openblas = ["xlai-qts-core/openblas"]
metal = ["xlai-qts-core/metal"]
vulkan = ["xlai-qts-core/vulkan"]

[dependencies]
async-stream.workspace = true
base64.workspace = true
hound.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "sync"] }
xlai-core.workspace = true
xlai-qts-core.workspace = true

[dev-dependencies]
futures-util.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
xlai-runtime.workspace = true

[lints]
workspace = true
