[package]
name = "xlai-ffi"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[features]
default = ["openblas"]
openblas = ["xlai-native/openblas"]
metal = ["xlai-native/metal"]
vulkan = ["xlai-native/vulkan"]

[lib]
crate-type = ["cdylib"]

[dependencies]
xlai-native = { path = "../xlai-native" }

[lints]
workspace = true
