[package]
name = "xlai-ffi"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "C ABI shared library wrapping `xlai-native`."
publish = false

[features]
default = ["openblas"]
openblas = ["xlai-native/openblas"]
metal = ["xlai-native/metal"]
vulkan = ["xlai-native/vulkan"]

[lib]
crate-type = ["cdylib"]

[dependencies]
xlai-native.workspace = true

[lints]
workspace = true
