[package]
name = "xlai-llama-cpp-sys"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
links = "llama"
build = "build.rs"

[features]
default = []
metal = []
vulkan = []

[build-dependencies]
bindgen.workspace = true
cc = "1.2.58"
cmake.workspace = true

[lints]
workspace = true
