[package]
name = "xlai-local-common"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Shared text-only chat preparation, prompts, and tool JSON envelope for local LLM backends"

[dependencies]
jsonschema.workspace = true
rust-embed.workspace = true
serde_json.workspace = true
tera.workspace = true
xlai-core = { path = "../xlai-core" }

[lints]
workspace = true
