[package]
name = "xlai-native"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[features]
default = ["openblas"]
openblas = [
    "xlai-backend-llama-cpp/openblas",
    "xlai-backend-qts?/openblas",
]
metal = [
    "xlai-backend-llama-cpp/metal",
    "xlai-backend-qts?/metal",
]
vulkan = [
    "xlai-backend-llama-cpp/vulkan",
    "xlai-backend-qts?/vulkan",
]
# Optional: avoid linking QTS (standalone GGML) unless you need native TTS in the aggregate crate.
qts = ["dep:xlai-backend-qts"]

[lints]
workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
xlai-observability.workspace = true

[dependencies]
xlai-backend-llama-cpp.workspace = true
xlai-backend-openai.workspace = true
xlai-backend-qts = { workspace = true, optional = true }
xlai-backend-transformersjs.workspace = true
xlai-core.workspace = true
xlai-runtime.workspace = true
