[package]
name = "xlai-native"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Aggregate native xlai backends (llama.cpp, OpenAI, QTS, transformers.js)."
publish = false
build = "build.rs"

[features]
default = ["openblas"]
openblas = ["xlai-facade/openblas"]
metal = ["xlai-facade/metal"]
vulkan = ["xlai-facade/vulkan"]
# Optional: avoid linking QTS (standalone GGML) unless you need native TTS in the aggregate crate.
qts = ["xlai-facade/qts"]

[lints]
workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tracing-subscriber = { workspace = true, default-features = false, features = [
    "env-filter",
    "fmt",
    "registry",
    "std",
] }

[dependencies]
xlai-facade = { workspace = true, features = ["llama"] }
