[package]
name = "xlai-observability"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Shared tracing subscriber initialization for xlai binaries and examples."
publish = false

[dependencies]
tracing.workspace = true
tracing-subscriber = { workspace = true, default-features = false, features = [
    "env-filter",
    "fmt",
    "registry",
    "std",
] }

[lints]
workspace = true
