[package]
name = "xlai-qts-browser"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "QTS browser manifest and capability types (no native GGML/ORT)."
publish = false

[dependencies]
serde = { workspace = true, features = ["derive"] }
thiserror.workspace = true

[lints]
workspace = true
