[package]
name = "xlai-qts-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI and TUI for Qwen3 TTS (xlai QTS stack)."
publish = false
default-run = "xlai-qts"

[[bin]]
name = "xlai-qts"
path = "src/main.rs"

[features]
default = ["openblas"]
openblas = ["xlai-qts-core/openblas"]
metal = ["xlai-qts-core/metal"]
vulkan = ["xlai-qts-core/vulkan"]
native = ["xlai-qts-core/native"]
acl = ["xlai-qts-core/acl"]
armnn = ["xlai-qts-core/armnn"]
cann = ["xlai-qts-core/cann"]
coreml = ["xlai-qts-core/coreml"]
cuda = ["xlai-qts-core/cuda"]
directml = ["xlai-qts-core/directml"]
migraphx = ["xlai-qts-core/migraphx"]
nnapi = ["xlai-qts-core/nnapi"]
onednn = ["xlai-qts-core/onednn"]
openvino = ["xlai-qts-core/openvino"]
qnn = ["xlai-qts-core/qnn"]
rknpu = ["xlai-qts-core/rknpu"]
rocm = ["xlai-qts-core/rocm"]
tensorrt = ["xlai-qts-core/tensorrt"]
tvm = ["xlai-qts-core/tvm"]
vitis = ["xlai-qts-core/vitis"]
xnnpack = ["xlai-qts-core/xnnpack"]

[dependencies]
anyhow.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
xlai-core.workspace = true
xlai-qts-core.workspace = true
xlai-runtime.workspace = true
hound.workspace = true
cpal.workspace = true
crossterm.workspace = true
ratatui.workspace = true
serde_json.workspace = true
tracing-subscriber = { workspace = true, default-features = false, features = [
    "env-filter",
    "fmt",
    "registry",
    "std",
] }
