[package]
name = "xlai-runtime"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
async-stream.workspace = true
futures-util.workspace = true
gray_matter.workspace = true
rust-embed.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tera.workspace = true
xlai-core = { path = "../xlai-core" }

[dev-dependencies]
base64.workspace = true
tokio.workspace = true

[target.wasm32-unknown-unknown.dependencies]
getrandom = { workspace = true, features = ["js"] }
