[package]
name = "xlai-wasm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[lints]
workspace = true

[features]
default = ["qts"]
# Local QTS in the browser (stub engine until GGML/ORT WASM integration; see docs/qts-wasm-browser-runtime.md).
qts = ["dep:xlai-backend-qts-wasm", "dep:xlai-qts-browser"]

[dependencies]
futures-util.workspace = true
js-sys.workspace = true
serde.workspace = true
serde_json.workspace = true
serde-wasm-bindgen.workspace = true
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
xlai-backend-openai = { path = "../xlai-backend-openai" }
xlai-backend-qts-wasm = { path = "../xlai-backend-qts-wasm", optional = true }
xlai-backend-transformersjs = { path = "../xlai-backend-transformersjs" }
xlai-core = { path = "../xlai-core" }
xlai-qts-browser = { path = "../xlai-qts-browser", optional = true }
xlai-runtime = { path = "../xlai-runtime" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
