[package]
name = "xlai-wasm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "WebAssembly bindings for xlai (built for the `@yai-xlai/xlai` npm package; not published as its own crates.io crate)."
publish = false

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[lints]
workspace = true

[features]
default = ["qts"]
# Local QTS in the browser (stub engine until GGML/ORT WASM integration; see docs/qts-wasm-browser-runtime.md).
qts = []

[dependencies]
futures-util.workspace = true
js-sys.workspace = true
serde.workspace = true
serde_json.workspace = true
serde-wasm-bindgen.workspace = true
thiserror.workspace = true
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
xlai-backend-openai.workspace = true
xlai-backend-transformersjs.workspace = true
xlai-core.workspace = true
xlai-runtime.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
