[package]
name = "xlai-backend-openrouter"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "OpenRouter Responses API chat backend for xlai"

[lints]
workspace = true

[dependencies]
async-stream.workspace = true
base64.workspace = true
futures-util.workspace = true
serde.workspace = true
serde_json.workspace = true
xlai-core.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
reqwest = { workspace = true, features = ["rustls"] }
tokio.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
gloo-timers = { version = "0.3", features = ["futures"] }
reqwest.workspace = true

[dev-dependencies]
tokio.workspace = true
wiremock = "0.6"

