[package]
name = "xlai-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Core chat types, streaming protocol, and tool abstractions for xlai"

[lints]
workspace = true

[dependencies]
async-stream.workspace = true
base64.workspace = true
ciborium.workspace = true
futures-core.workspace = true
futures-util.workspace = true
serde.workspace = true
serde_json.workspace = true
